samples/_failures_safe/1761531660_ddbf4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42f16f3e.c: In function ‘main’:
./samples/SAFE/__tmp_42f16f3e.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_42f16f3e.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42f16f3e.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42f16f3e.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42f16f3e.c:155:17: error: expected declaration or statement at end of input
